<resources>
    <string name="app_name">atv-Room</string>
    <string name="title_main">Escolha uma opção</string>
    <string name="add_product">Adicionar produto</string>
    <string name="search_product">Procurar produto</string>
    <string name="list_products">Listar Produtos</string>
    <string name="product_name">Nome</string>
    <string name="product_price">Preço</string>
    <string name="product_qtt">Quantidade</string>
    <string name="add">Adicionar</string>
    <string name="success_add_msg">Produto registrado com sucesso</string>
    <string name="fail_add_msg">Erro ao adicionar produto</string>
    <string name="fill_fields_msg">Preencha todos os campos</string>
</resources>